<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewEntryActivity" >
 
    <ImageView
        android:contentDescription="@string/image_desc"
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitCenter"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp" />
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/image"
        android:id="@+id/start_time_layout"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp" >
        
	    <TextView 
	        android:id="@+id/start_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/start_prompt"
	        android:textSize="20sp" />
	    
	    <EditText
	        android:inputType="none"
	        android:hint="@string/time_hint"
	        android:id="@+id/txtStartTime"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/click_to_select"
	        android:textSize="20sp" />

    </LinearLayout>
    
  	<LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/start_time_layout"
        android:id="@+id/end_time_layout"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp" >
        
	    <TextView 
	        android:id="@+id/end_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/end_prompt"
	        android:textSize="20sp" />
	    
	    <EditText
	        android:inputType="none"
	        android:hint="@string/time_hint"
	        android:id="@+id/txtEndTime"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/click_to_select"
	        android:textSize="20sp" />

    </LinearLayout>
 
</RelativeLayout>