<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <TextView
        android:id="@+id/my_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_project"
        android:layout_alignParentTop="true"
 	    android:layout_centerHorizontal="true"
 	    android:gravity="center_horizontal"
		android:textSize="50sp"
		android:textStyle="bold"
		android:layout_marginTop="-10sp"
		android:layout_marginBottom="-10sp" />
    
 	<TextView
 	    android:id="@+id/hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
 	    android:layout_centerHorizontal="true"
 	    android:layout_below="@id/my_project"
		android:textSize="200sp"
		android:layout_marginTop="-10sp"
		android:layout_marginBottom="-10sp" />
 	
 	<TextView
 	    android:id="@+id/hours_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/hours"
        android:text="@string/hour_text"
		android:textSize="50sp" /> 	
 	
 	<Button 
 	    android:id="@+id/listButton"
 	    android:layout_width="fill_parent"
 	    android:layout_height="80dp"
 	    android:layout_below="@id/hours_text"
 	    android:layout_centerHorizontal="true"
 	    android:text="@string/list_button"
 	    android:textSize="25sp"
 	    android:onClick="gotoList" />

</RelativeLayout>